syntax = "proto3";

package shardman;

option go_package = "github.com/tunvx/simplebank/grpc/pb/shardman";

message LookupAccountShardRequest {
    int64 account_id = 1;
}

message LookupAccountShardResponse {
    int64 account_id = 1;
    int32 shard_id = 2;
}